--- a/publishers/demo.html
+++ b/publishers/demo.html
@@ -7,7 +7,7 @@
 <script src="http://widget.tuvalabs.com/static/widget.js" id="tuva_wstag" api_key="233454841b94a9a8503859ce911180f78f639dc1" username="trickster">
 </script>-->
 <div style="display:inline; width:500px;">
-<div style="display:block;float:right">
+<div style="display:block;float:left">
 	<script src="http://widget.tuvalabs.com/static/widget.js" id="tuva_wstag" api_key="233454841b94a9a8503859ce911180f78f639dc1" username="trickster"></script>
 </div>
 </div>
